sec:Discussion: Korrelation

--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -19,15 +19,14 @@ Knapp 91\% der Studienteilnehmer*innen sind weiblich. Nur gerade mal 19 Teilnehm
 
 Ein weiteres auffälliges Merkmal der Stichprobe ist das hohe Bildungslevel der Befragten. 60.6\% gaben an einen Abschluss im tertiären Sektor zu besitzen und 36.2\% gaben an einen Bildungsabschluss im Sekundar II Sektor gemacht zu haben. Gemäss \citeA{Bfs2017} aus dem Jahre 2017 in der Altersgruppe von 25 bis 34 Jährigen haben in der Schweiz 41.8\% einen Sekundar II Abschluss und 50.2\% einen Abschluss auf Tertiärstufe. Die Stichprobe liegt demzufolge leicht über dem schweizerischen Schnitt. Dies könnte auf die starke Rekrutierung aus dem privaten Umfeld des Autors zurückzuführen sein. Zudem scheint die hohe Bildung mit dem Durchschnittsalter der Stichprobe von 33.9 Jahren einher zu gehen. Gemäss \citeA{Bfs2017a} sind  Frauen und Männer mit einer Tertiärbildung tendenziell über 30 Jahre bei ihrem ersten Kind. Obwohl diese Zuordnung nachträglich nicht mehr möglich ist, so kann basierend auf der durchschnittlichen Personen im Haushalt von 3.6 davon ausgegangen werden, dass sich die Stichprobe im Schweizer Mittel bewegt. Ob sich die Bildung, das Einkommen und das Alter auf die Ergebnisse dieser Arbeit auswirken ist schwer zu sagen. Gemäss \citeA{Livingstone2015} haben höher gebildete Eltern mehr Vertrauen in ihre digitalen Fähigkeiten im Umgang mit Medien. Zudem scheinen höher gebildete Eltern mit einem höheren Einkommen digitale Aktivitäten mit ihrem Nachwuchs eher zu reglementieren. Des Weitern sind Soziodemografische Merkmale wichtige Faktoren der Eltern-Kind-Beziehung \cite{Kammerl2012}. Dies scheint in direktem Zusammenhang mit dieser Studie zu stehen. Demzufolge könnten die hohen Bildungsabschlüsse und die hohen Einkommen protektiv auf die Mediennutzung der Eltern im Beisein der Kinder wirken. 
 
-Werden die demografischen Daten mit den einzelnen erfassten Skalen in Verbindung gesetzt, so kann ein Zusammenhang zwischen der Bildung und der Stressskala Anpassung gefunden werden. Die Gruppe Berufsmatura / Fachmittelschule hatte im Vergleich zur Gruppe Höhere Fachschule im Schnitt eine höhere Ausprägung im Bereich Anpassung. Heisst dies nun, dass sich Abgänger einer Berufsmatura in der Regel mehr anpassen als Abgänger einer höheren Fachschule? Um dieses Ergebniss schlüssig interpretieren zu können müssten weitere Untersuchungen angestellt werden, was im Bezug zur Forschungsfrage in dieser Arbeit an einem anderen Ort zu erfolgen hat. Rückschliessend kann gefolgert werden, dass bezüglich der demografischen Daten der Stichprobe keine signifikanten Zusammenhänge zwischen den einzelnen Skalen gefunden werden konnte. Dies deutet auf eine heterogene Zusammensetzung der Stichprobe hin, da bezüglich der demografischen Daten keine statistisch signifikanten Gruppen gebildet werden konnte. 
+Werden die demografischen Daten mit den einzelnen erfassten Skalen in Verbindung gesetzt, so kann ein Zusammenhang zwischen der Bildung und der Stressskala Anforderung gefunden werden. Diese bildet die Wahrnehmung vor allem externer Anforderungen, wie Zeitmangel, Termindruck oder Aufgabenbelastung ab. Die Gruppe Berufsmatura / Fachmittelschule hatte im Vergleich zur Gruppe Höhere Fachschule im Schnitt eine höhere Ausprägung im Bereich Anforderung. Heisst dies nun, dass sich Abgänger einer Berufsmatura in der Regel gefordert fühlen als Abgänger einer höheren Fachschule? Rein intuitiv könnte diesem Ergebnis zugestimmt werden. Abgänger einer Fachhochschule wurden  höhere Anforderungen für die Erreichung des Diploms abverlangt als zur Erreichung einer Berufsmatura, da sich diese beiden Ausbildungen auf unterschiedlich anspruchsvollen Stufen befinden. Doch um es schlüssig interpretieren zu können, müssten weitere Untersuchungen angestellt werden, was im Bezug zur Forschungsfrage in dieser Arbeit an einem anderen Ort zu erfolgen hat. Rückschliessend kann gefolgert werden, dass bezüglich der demografischen Daten der Stichprobe keine signifikanten Zusammenhänge zwischen den einzelnen Skalen gefunden werden konnte. Dies scheint auf eine heterogene Zusammensetzung der Stichprobe bezüglich den erfassten Skalen hinzudeuten, da mittels demografischen Daten keine statistisch signifikanten Gruppen der doch sehr prägenden Konstrukte wie Stress und Bindung gebildet werden konnte. 
+
+Die Bindungsskala \acrfull{aas} bestehend aus den drei Unterskalen \enquote{Nähe}, \enquote{Vertrauen} und \enquote{Angst} kann zu einer erweiterten Skala \enquote{Sichere Bindung} kombiniert werden, in der die Probanden anhand sicherer und unsicherer Bindung aufgeteilt wurden. In der vorliegenden Stichprobe ergab das eine Verteilung von 
+69.7\% sicheren und 30.3\% unsichere Eltern. Dies entspricht in etwa dem Befund der Metaanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden fanden. Was wiederum in etwa den Befunden von \citeA{Ainsworth1970} in ihrem Fremde-Situations-Test von 70\% sicher gebundene und 30\% unsicher gebundenen entspricht. Es kann somit davon ausgegangen werden, dass die vorliegenden Stichprobe hinsichtlich der Bindungsmuster sicher und unsicher der üblichen Verteilung entspricht.
 
 Die erfasste Mediennutzung der Eltern enthält eine Sammlung von unterschiedlichen Medientätigkeiten, die auf unterschiedlichen Medien ausgeführt werden können. Auf dem Smartphone zum Beispiel, können alle die in der Umfrage abgebildeten Tätigkeiten genutzt werden. Im Gegenzug zu einem Buch, mit dem keine Musik gehört und keine Filme geschaut werden kann. Wie bereits geschildert, konnte gemäss Hypothese $H1$ kein Zusammenhang zwischen der Bindung und der Mediennutzung insgesamt festgestellt werden. Werden jedoch die Bindungskategorien \enquote{sicher} und \enquote{unsicher} in Beziehung zu den einzelnen Medientätigkeiten gesetzt, so entsteht zwischen dem Schreiben von Textnachrichten, was vorwiegend auf dem Smartphone erfolgt, und der Bindung ein signifikanter Zusammenhang. Dieser Zusammenhang wird grösser, wenn nur die Zeit der Mediennutzung verwendet wird, wenn das zu betreuende Kind wach ist. Das heisst, dass die Bindung der Eltern durchaus in einem Zusammenhang mit dem Schreiben von Textnachrichten während der Betreuung ihrer Kinder steht, wenn auch nur in einem geringen Mass (geringer Effekt gemäss \citeA{Cohen1988a}). Relevant ist dieser Befund insofern, als dass die Nutzung des Smartphones in dieser Stichprobe während der Betreuung am meisten stattgefunden hat. Zudem gaben die Probanden an, am wenigsten auf das Smartphone während der Betreuung verzichten zu können. Daraus lässt sich schliessen, dass dem Smartphone eine grosse Bedeutung für die Eltern in der Kinderbetreuung zufällt. Da aus den in dieser Arbeit erfassten Daten keine direkte Smartphonenutzung in Minuten extrahiert werden kann (siehe auch \textit{\nameref{sec:Methodenkritik}} weiter unten), könnte es für zukünftige Forschung interessant sein, die Bindung der Eltern im direkten Zusammenhang mit dem Smartphone und den darauf ausgeführten Tätigkeiten zu stellen. Insofern lässt sich die Befürchtung von \citeA{Prekop2017}, dass unsicher Gebundenen lieber eine Bindung zu technischen Dingen aufbauen, im Zusammenhang mit dem Smartphone nicht ganz ausschliessen. Zudem unterstreicht dieser Befund die Ergebnisse weiterer Studien, die Bindung mit  einer Medientätigkeit in Verbindung brachten \cite{Jia2016, Chang2015, Lin2011a}. Diese untersuchten die problematische Internetnutzung (\textit{engl. problematic internet use (PIU)}) und setzten sie in Verbindung mit der Bindungstheorie. Dabei stellten sie fest, dass unsichere Bindung als Prädiktor für die problematische Internetnutzung bezeichnet werden kann. An dieser Stelle sei ebenso auf die Masterarbeit von \citeA{Dietziker2018} verwiesen, der den Zusammenhang der Smartphonenutzung der Eltern auf die Bindungssicherheit ihrer Kinder untersuchte. Dabei konnte er feststellen, dass Eltern mit ambivalent (unsicher) gebundenen Kindern, ihr Smartphone im Beisein ihrer Kinder signifikant häufiger benutzten als Eltern sicher gebundener Kinder. Dies beschreibt keinen gerichteten Zusammenhang und es bleibt offen, ob die Eltern wegen ihren ambivalent gebundenen Kindern das Smartphone mehr benützen, oder ob die häufige Nutzung sich auf die Bindung der Kinder niederschlägt.
 
-
-
-\textit{TBD: Interpretation anhand der erfassten Skalen}
-Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte. Bindung AAS im Vergleich zu den Zahlen von Strange-Situation-Test setzen.
-
+Gemäss der Hypothesenprüfung konnte kein Zusammenhang zwischen der Mediennutzung und der Bindung, bezw. des subjektiven erlebten Stress gefunden werden. Sobald jedoch die Mediennutzung in die einzelnen Tätigkeiten unterteilt wird, kann ein Zusammenhang zwischen der Bindung und dem Schreiben von Textnachrichten gefunden werden (siehe oben). Sobald die einzelnen Skalenausprägungen der Konstrukte Bindung, Stress und subjektives Wohlbefinden in ihre Einzelteile zerlegt werden, können diverse Korrelationen zwischen den einzelnen Medientätigkeiten und den einzelnen Skalenausprägungen gefunden werden. Gemäss \citeA{Schmidt2004} lassen sich in der Deutschen Version des \acrshort{aas} die Bindungsstile nicht direkt zuordnen (siehe auch \textit{\nameref{sec:Methodenkritik}}). Somit erscheint es legitim, die einzelnen Skalenausprägungen hinsichtlich der einzelnen Mediennutzung zu prüfen. Auffällig bei den Befunden ist, dass das Schreiben von textnachrichten mit nahezu jeder Skala korreliert (einzelne Ergebnisse siehe \nameref{app:ResultateMedientaetigkeiten} im Anhang). Die Bindungsskalen Nähe und Vertrauen gehen negativ mit dem Schreiben von Textnachrichten währendem das Kind wach ist einher. Wogegen die Bindungsskala Angst positiv einhergeht. Wird davon ausgegangen, dass Textnachrichten vorwiegend auf dem Smartphone geschrieben werden, scheinen Probanden, die sich mit Nähe und Intimität in Beziehung zu anderen wohl fühlen und darauf vertrauen können, dass andere für sie erreichbar sind, während der Betreuung weniger mit dem Smartphone beschäftigt zu sein. Zudem scheinen Probanden, die Ängste davor haben in einer Beziehung nicht geliebt zu werden, einen erhöhten Smartphonegebrauch aufzuweisen. Ebenso scheinen Probanden mit einer tiefen Ausprägung auf der Bindungsskala Vertrauen weniger Textnachrichten zu verfassen währendem das Kind schläft. Ein erhöhter Smarpthonegebrauch scheint mit erhöhten Sorgen, Zukunftsängsten und Frustrationsgefühlen einherzugehen. Wohingegen Probanden mit einem hohen Ausmass an Freude das Smartphone eher weniger benutzen, um Textnachrichten zu schreiben. Hingegen schreiben Probanden mit einem ehröhten Stresserleben tendentiell eher mehr Textnachrichten. Bezogen auf das subjektive Wohlbefinden geht ein hohes Wohlbefinden mit einem verringerten Smartphonegrbacuh einher. All diese Skalen deuten darauf hin, dass ein schwacher Zusammenhang zwischen dem Schreiben von Textnachrichten und den einzelnen Skalen vorherrscht. Insgesamt gesehen deuten diese Ergebnisse auf einen Zusammenhang zwischen der Bindung und dem Stress zur Mediennutzung, explizit, dem Smartphonegbrauch hin. Das es sich jedoch um schwache Effekte handelt, wird der Zusammenhang marginal sein und deshalb auch in den aufgestellten Hypothesen nicht abbildbar. Vielmehr könnte von einer Tendenz in diesem Bereich gesprochen werden.  
 
 \textit{Zusammenfassende Interpretation}
 \begin{itemize}
@@ -40,6 +39,8 @@ Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in et
 \subsection{TBD: Methodenkritik} \label{sec:Methodenkritik}
 \begin{itemize}
     \item Medienerfassung -> keine Unterteilung in Geräte möglich (Smartphone, etc). Umfrage: Abfrage von MP3Player und Tageszeitungen -> eigentlich wollte ich Medien nach Geräten und nicht Medientätigkeit => Problem: Heute kann mit dem Smartphone all die Tätigkeiten erledigt werden (inkl. Radio hören und TV schauen). Was ich eigentlich wollte, wären Geräte wie Smartphone und Tablet, die eine Barriere zwischen Kind und Eltern aufbauen herauskristalliesieren.
+    \item AAS ist in der deutschen Form nicht geeignet um eine Unterteilung in sicher und unsicher vorzunehmen.
+    \item PSQ - es konnten keine Gruppenunterschiede im Geschlecht gefunden werden, im Gegensatz zu \citeA{Fliege2001}, die Unterschiede gefunden haben.
 \end{itemize}
 
 % ---------------------------------------
